WIP Server/desktop install setup
Also
- pacman-keys - refresh database after
- Fix hostname setup in chroot (hostenamectl won't work in chroot)
- Fix initramfs setup (didn't have lvm2 in packages, sd-lvm2 no longer exists)
- Fix home config setup (before it dependend on itself having already run...)
- Fix ranger devicons setup
- Fix QMK setup (need to clone my repo)
- Connman setup can't be done in chroot, move to after
- Maybe fix nvidia-dkms installation (should be installed before anything else
  that depends on nvidia or nvidia-dkms or the normal nvidia package will be
  installed)
- Add way to install packages on only server or laptop
- Fix restow to work when dot directories don't exist on current machine
- Allow connecting to local network even when on vpn
- Don't start zsh in .profile (TRAMP issues and wasn't a good idea in the first
  place)
- Enable sshd on server with ufw firewall rules

LLM stuff
- Set up ollama and koboldcpp (tried and failed to setup aphrodite, exllamav2,
  or vllm with amd)
- Add script to pull models from hugging face
- Partial open webui setup (will include docker-compose file later once tweak)

--- a/root/README.org
+++ b/root/README.org
@@ -1,16 +1,24 @@
 * Pre-Install
 - Either wipe the root/var partitions or move e.g. =/opt=, =/usr=, =/var=, =/lib= , =/lib64=, and =/etc= to somewhere else as backup (boot is okay to keep though will need to delete old image to be able to install intel-ucode).  I also deleted =bin= and =sbin= symlinks.
 - Mount partitions including boot and ESP (see boot README for example)
+  - Make sure ESP's label is =SYSTEM=
 - Connect to the internet (e.g. with ~iwctl~)
 - Dotfiles should be in place (should be able to run the scripts in this directory)
+- If you don't have dotfiles locally:
+  - You probably want to wait to clone into home until creating the user/home directory (you can clone somewhere else and clone again later) or you will at least need to ~chown -R <user>:<user> <home-dir>~ later before running the post-install script
+  - ~git clone https://github.com/noctuid/dotfiles <path>~
 - Run the =./system-install= script to pacstrap and then chroot into the system
 
 * Inside Chroot
 - Create your user: ~useradd --create-home <user>~
 - Set your user's password: ~password <user>~
 - Recommended: ~pacman -Syu~
+
+- Clone dotfiles again if necessary (with ~sudo -u <user>~), cd into, and ~git submodule update --init --recursive~
 - Validate then run ~./pacman-keys~
 - ~./post-install~
+For server:
+- ~post-install --server~ instead
 
 * After Reboot
 - ~sudo post-install non-chroot~
@@ -18,3 +26,12 @@
 
 * Size Issues
 If nix is just monstrously large, see nixshrink.
+
+* Why Bash?
+The script is in place and working.
+
+I had tried SaltStack, but it ended up being extra work without real benefit, and when I needed to use it for a fresh install, I couldn't since there was an issue with installing it.  I didn't try Ansible or any other similar software, but the post-install process doesn't need very complicated logic.
+
+If I had to do it from scratch I might try aconfmgr or rebos because I'd prefer something more declarative on the surface, but I might just still use bash.  I would rather use something like this than to use an entirely different distro like NixOS, which I now have a much more negative opinion on after trying multiple times, after using nix more with Arch (where dealing with opengl applications and other complications ranges from painful to a nightmare), and after using nix-darwin for everything for maybe a year on my work laptpop.
+
+Ideal?  No, but so far it's been the least hassle for me.
